2011-05-13

	* src/textview.c: textview_make_clickable_parts(): removed alloca()
	  and use GSList.

2011-05-12

	* src/prefs_ui.c: removed alloca() calls.

2011-05-12

	* libsylph/prefs.h
	  libsylph/account.c
	  src/account_dialog.c: increased the prefs buffer size from 1024
	  to 8192.

2011-05-06

	* version 3.1.1

2011-03-22

	* configure.in: added the following line for newer gcc-4.5:
	  LIBS="$LIBS `$PKG_CONFIG --libs enchant`"
	  (thanks to Ricardo Mones)

2011-03-16

	* src/compose.c: changed keyboard shortcut of File/Send to prevent
	  accidental sending.

2011-03-14

	* src/summaryview.c: mark messages read when message view becomes
	  visible by Enter or Space key.

2011-03-01

	* src/addressadd.c
	  src/addrindex.c: renamed variable 'interface' to 'iface'.

2011-02-28

	* src/addressbook.c
	  src/prefs_common_dialog.c: fixed compilation problem on MinGW
	  (interface -> iface). Thanks to Hayashi.

2011-02-25

	* libsylph/defs.h
	  libsylph/utils.c
	  src/main.c: OS X: changed the location of settings to
	  ~/Library/Application Support/Sylpheed .

2011-02-25

	* libsylph/utils.c
	  libsylph/defs.h
	  src/mimeview.c
	  src/prefs_common_dialog.c: use 'open' command for URI, file open
	  and text editor on OS X.

2011-02-15

	* src/summaryview.c: summary_show_queued_msgs(): clear selection list
	  because it can be invalid after appending messages.

2011-02-14

	* src/addressbook.c
	  src/addressitem.h
	  src/addrindex.[ch]: renamed 'interface' in struct to 'iface' to
	  prevent compilation problem on some environments.

2011-02-10

	* src/main.c
	  src/gtkutils.c: implement fix_font_setting() for Mac OS X.

2011-02-10

	* libsylph/codeconv.c:
	  conv_get_locale_charset()
	  conv_get_locale_charset_str(): return correct locale encoding
	  for Mac OS X (usually UTF-8).

2011-02-04

	* libsylph/prefs_common.[ch]
	  src/addressbook.c: save the columns width of address book.

2011-01-31

	* version 3.1.0

2011-01-31
