@@ -2,6 +2,7 @@
 
 	* src/textview.c: textview_make_clickable_parts(): removed alloca()
 	  and use GSList.
+	* src/compose.c: removed some alloca() calls.
 
 2011-05-12
 
